urpc/internal/core/analysis/testdata/errors/types/undefined_in_proc.ufo
// @expect: E201

rpc Users {
	proc GetUser {
		input {
			id: string
		}
		output {
			user: UndefinedUser
		}
	}
}
